Resolve dependencies on other ESP_IDF components

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ if (NOT DEFINED PROJECT_NAME)
     include($ENV{IDF_PATH}/tools/cmake/project.cmake)
     project(esp_littlefs)
 else ()
-    file(GLOB_RECURSE SOURCES src/*.cpp)
-    idf_component_register(SRCS ${SOURCES} INCLUDE_DIRS src)
+    file(GLOB SOURCES src/littlefs/*.c)
+    list(APPEND SOURCES src/esp_littlefs.c src/littlefs_api.c)
+    idf_component_register(
+        SRCS ${SOURCES}
+        INCLUDE_DIRS src include
+        REQUIRES spi_flash)
 endif (NOT DEFINED PROJECT_NAME)
