--- a/Kconfig
+++ b/Kconfig
@@ -69,11 +69,17 @@ menu "LittleFS"
             Saves timestamp on modification. Uses an additional 4bytes.
     
     config LITTLEFS_USE_ONLY_HASH
-        bool "Only remember a hash insted of a file path in the file descriptor"
+        bool "Don't store filepath in the file descriptor"
         default "y"
         help
-            Saves heap memory but might cause files to prevent unlinking or renaming upon (unlikely) hash collision.
-            If enabled, functionality (fstat) that requires the file path will not work.
+            Records the filepath only as a 32-bit hash in the file descriptor instead
+            of the entire filepath. Saves approximately `sizeof(filepath)` bytes
+            per file descriptor.
+            If enabled, functionality (like fstat) that requires the file path 
+            from the file descriptor will not work.
+            In rare cases, may cause unlinking or renaming issues (unlikely) if
+            there's a hash collision between an open filepath and a filepath
+            to be modified.
 
     config LITTLEFS_HUMAN_READABLE
         bool "Make errno human-readable"
@@ -87,7 +93,7 @@ menu "LittleFS"
         depends on LITTLEFS_USE_MTIME
         default LITTLEFS_MTIME_USE_SECONDS
         help
-            Help
+            Save an additional 4-byte attribute. Options listed below.
 
         config LITTLEFS_MTIME_USE_SECONDS
             bool "Use Seconds"
@@ -97,7 +103,9 @@ menu "LittleFS"
         config LITTLEFS_MTIME_USE_NONCE
             bool "Use Nonce"
             help
-                Saves nonce on modification. Uses an additional 4bytes.
+                Saves nonce on modification; intended for detecting filechanges
+                on systems without access to a RTC.
+
                 A file who's nonce is the same as it was at a previous time has 
                 high probability of not having been modified.
 
