--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "main/littlefs"]
 	path = src/littlefs
-	url = https://github.com/ARMmbed/littlefs.git
+	url = https://github.com/littlefs-project/littlefs.git
