Began writing the abs interface.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ if (NOT DEFINED PROJECT_NAME)
     project(esp_littlefs)
 else ()
     file(GLOB SOURCES src/littlefs/*.c)
-    list(APPEND SOURCES src/esp_littlefs_old.c src/littlefs_api.c src/esp_littlefs_flash.c src/esp_littlefs_ram.c src/esp_littlefs_sdcard.c src/esp_littlefs_vfs.c)
+    list(APPEND SOURCES src/esp_littlefs_old.c src/littlefs_api.c src/esp_littlefs_flash.c src/esp_littlefs_ram.c src/esp_littlefs_sdcard.c src/esp_littlefs_vfs.c src/esp_littlefs_abs.c)
     idf_component_register(
         SRCS ${SOURCES}
         INCLUDE_DIRS src include
