Added the sdcard backend. Updated the README.md.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,5 @@ else ()
     idf_component_register(
         SRCS ${SOURCES}
         INCLUDE_DIRS src include
-        REQUIRES spi_flash)
+        REQUIRES spi_flash sdmmc)
 endif (NOT DEFINED PROJECT_NAME)
