Fixed include directories.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ else ()
     list(APPEND SOURCES src/esp_littlefs_flash.c src/esp_littlefs_ram.c src/esp_littlefs_sdcard.c src/esp_littlefs_vfs.c src/esp_littlefs_abs.c)
     idf_component_register(
         SRCS ${SOURCES}
-        INCLUDE_DIRS src include
+        INCLUDE_DIRS include
+        PRIV_INCLUDE_DIRS src
         REQUIRES spi_flash sdmmc)
 endif (NOT DEFINED PROJECT_NAME)
