attempt to have github actions confirm build

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -19,4 +19,4 @@ jobs:
     - name: esp-idf build
       uses: espressif/esp-idf-ci-action@latest
       with:
-        path: 'esp_littlefs'
+        path: '.'
