lfs_util initial commit. Used to make lfs_malloc allocate only to internal heap

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,10 @@ cmake_minimum_required(VERSION 3.10)
 
 project(littlefs)
 
+add_definitions( -DLFS_CONFIG=lfs_config.h)
+
 file(GLOB SOURCES src/littlefs/*.c)
-list(APPEND SOURCES src/esp_littlefs.c src/littlefs_api.c)
+list(APPEND SOURCES src/esp_littlefs.c src/littlefs_api.c src/lfs_config.c)
 idf_component_register(
     SRCS ${SOURCES}
     INCLUDE_DIRS src include
