--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   build-component:
     strategy:
+      fail-fast: false
       matrix:
         idf_ver: ["v4.0", "v4.1", "v4.2", "v4.3"]
         idf_target: ["esp32"]
