--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ list(APPEND SOURCES src/esp_littlefs.c src/littlefs_api.c src/lfs_config.c)
 idf_component_register(
     SRCS ${SOURCES}
     INCLUDE_DIRS src include
-    REQUIRES spi_flash)
+    REQUIRES spi_flash
+    PRIV_REQUIRES esptool_py
+    )
