--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        idf_ver: ["v4.0", "v4.1", "v4.2", "v4.3"]
+        idf_ver: ["v4.1", "v4.2", "v4.3"]
         idf_target: ["esp32"]
         include:
           - idf_ver: "v4.2"
