--- a/.github/workflows/esp_upload_component.yml
+++ b/.github/workflows/esp_upload_component.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-        submodules: recursive
+        with:
+          submodules: recursive
       - name: Upload component to component service
         uses: espressif/github-actions/upload_components@master
         with:
