Add lfs_config.h to be used by Ninja build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,8 @@ idf_component_register(
     REQUIRES spi_flash
     PRIV_REQUIRES esptool_py
     )
+
+set_source_files_properties(
+    ${SOURCES}
+    PROPERTIES COMPILE_FLAGS "-DLFS_CONFIG=lfs_config.h"
+)
