--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           submodules: recursive
       - name: esp-idf build
-        uses: BrianPugh/esp-idf-ci-action@v4.2.3
+        uses: Unit-e/esp-idf-ci-action@add-parameter-action
         with:
-          path: "."
+          esp_idf_version: v4.2.3
           action: "make -j8 tests-build"
