--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -19,7 +19,7 @@ jobs:
             idf_target: esp32s2
           - idf_ver: "v4.3"
             idf_target: esp32c3
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     container: espressif/idf:release-${{ matrix.idf_ver }}
     steps:
       - uses: actions/checkout@v3
@@ -35,7 +35,7 @@ jobs:
           idf.py build
 
   build-tests:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
