Fix build issues with latest ESP-IDF master branch
- Add explicit dependency for `vfs` component
- Bump up component revision

Closes https://github.com/joltwallet/esp_littlefs/issues/86

Signed-off-by: Mahavir Jain <mahavir@espressif.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ list(APPEND SOURCES src/esp_littlefs.c src/littlefs_api.c src/lfs_config.c)
 idf_component_register(
     SRCS ${SOURCES}
     INCLUDE_DIRS src include
-    REQUIRES spi_flash
+    REQUIRES spi_flash vfs
     PRIV_REQUIRES esptool_py
     )
 
