Fix esp-idf v5.0 warnings/errors

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRC_DIRS "."
                     INCLUDE_DIRS "."
-                    REQUIRES unity test_utils littlefs)
+                    REQUIRES unity test_utils littlefs spiffs fatfs esp_timer)
