make private APIs in src folder really private

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,13 @@ cmake_minimum_required(VERSION 3.10)
 
 file(GLOB SOURCES src/littlefs/*.c)
 list(APPEND SOURCES src/esp_littlefs.c src/littlefs_api.c src/lfs_config.c)
+
 idf_component_register(
     SRCS ${SOURCES}
-    INCLUDE_DIRS src include
-    REQUIRES spi_flash vfs
-    PRIV_REQUIRES esptool_py
-    )
+    INCLUDE_DIRS include
+    PRIV_INCLUDE_DIRS src
+    PRIV_REQUIRES esptool_py spi_flash vfs
+)
 
 set_source_files_properties(
     ${SOURCES}
