add esp_partition to priv_requires

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ idf_component_register(
     SRCS ${SOURCES}
     INCLUDE_DIRS include
     PRIV_INCLUDE_DIRS src
-    PRIV_REQUIRES esptool_py spi_flash vfs
+    PRIV_REQUIRES esp_partition esptool_py spi_flash vfs
 )
 
 set_source_files_properties(
