Only upload to esp component registry on version tags.

--- a/.github/workflows/esp_upload_component.yml
+++ b/.github/workflows/esp_upload_component.yml
@@ -2,8 +2,8 @@ name: Push LittleFS to Espressif Component Service
 
 on:
   push:
-    branches:
-      - master
+    tags:
+      - "v*.*.*"
 
 jobs:
   upload_components:
