--- a/Kconfig
+++ b/Kconfig
@@ -175,4 +175,37 @@ menu "LittleFS"
         help
             ESP-IDF's header file "fcntl.h" doesn't support macro "F_GETPATH",
             so we should define this macro here.
+
+    config LITTLEFS_MULTIVERSION
+        bool "Support selecting the LittleFS minor version to write to disk"
+        default "n"
+        help
+            LittleFS 2.6 bumps the on-disk minor version of littlefs from lfs2.0 -> lfs2.1.
+
+            This change is backwards-compatible, but after the first write with the new version,
+            the image on disk will no longer be mountable by older versions of littlefs.
+
+            Enabling LITTLEFS_MULTIVERSION allows to select the On-disk version
+            to use when writing in the form of 16-bit major version
+            + 16-bit minor version. This limiting metadata to what is supported by
+            older minor versions. Note that some features will be lost. Defaults to
+            to the most recent minor version when zero.
+
+    choice LITTLEFS_DISK_VERSION
+        prompt "LITTLEFS_DISK_VERSION"
+        depends on LITTLEFS_MULTIVERSION
+        default LITTLEFS_DISK_VERSION_MOST_RECENT
+        help
+            See LITTLEFS_MULTIVERSION for details.
+
+        config LITTLEFS_DISK_VERSION_MOST_RECENT
+            bool "Write the most recent LittleFS version"
+
+        config LITTLEFS_DISK_VERSION_2_1
+            bool "Write LittleFS 2.1"
+
+        config LITTLEFS_DISK_VERSION_2_0
+            bool "Write LittleFS 2.0 (no forward-looking erase-state CRCs)"
+
+    endchoice
 endmenu
