--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           export DEBIAN_FRONTEND=noninteractive
           apt update
-          apt install -y software-properties-common g++
+          apt install -y software-properties-common g++ python3-venv
           add-apt-repository -y ppa:git-core/ppa
           apt update
           apt install -y git
