--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -17,20 +17,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        idf_ver:
-          [
-            "release-v4.1",
-            "release-v4.2",
-            "release-v4.3",
-            "release-v4.4",
-            "release-v5.0",
-            "latest",
-          ]
+        idf_ver: ["release-v4.3", "release-v4.4", "release-v5.0", "latest"]
         idf_target: ["esp32"]
         include:
-          - idf_ver: "release-v4.2"
+          - idf_ver: "release-v4.4"
             idf_target: esp32s2
-          - idf_ver: "release-v4.3"
+          - idf_ver: "release-v4.4"
             idf_target: esp32c3
           - idf_ver: "release-v4.4"
             idf_target: esp32s3
@@ -40,11 +32,18 @@ jobs:
       - name: Update git
         run: |
           export DEBIAN_FRONTEND=noninteractive
-          apt update
-          apt install -y software-properties-common g++ python3-venv
+          apt-get update
+          apt-get install -y software-properties-common g++
           add-apt-repository -y ppa:git-core/ppa
-          apt update
-          apt install -y git
+          apt-get update
+          apt-get install -y git python3-venv
+      - name: Update Python # esp-idf docker image has ancient python 3.6.9
+        if: matrix.idf_ver == 'release-v4.3'
+        run: |
+          add-apt-repository -y ppa:deadsnakes/ppa
+          apt-get update
+          apt-get install -y python3.8 python3.8-venv
+          update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.8 1
       - uses: actions/checkout@v3
         with:
           submodules: recursive
@@ -64,7 +63,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        idf_ver: ["v4.2.3", "v4.3.3", "v4.4.1", "latest"]
+        idf_ver: ["v4.3.3", "v4.4.1", "latest"]
 
     steps:
       - name: Checkout repo
