--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -30,6 +30,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+
+      - name: Fetch tags in submodules
+        run: |
+          git submodule foreach --recursive 'git fetch --tags'
+
       - name: esp-idf build library
         uses: espressif/esp-idf-ci-action@v1
         with:
