--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -30,13 +30,14 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+
       - name: esp-idf build library
         uses: espressif/esp-idf-ci-action@v1
         with:
           esp_idf_version: ${{ matrix.idf_ver }}
           target: ${{ matrix.idf_target }}
           path: "example/"
-          command: idf.py build
+          command: apt update && apt install -y python3-venv && idf.py build
 
       - name: esp-idf build tests
         uses: espressif/esp-idf-ci-action@main
