remove esp-idf v4.3 from ci, add v5.1.  v4.3 is EOL soon, and has an ancient version of python that it's not worth further effort to get CI working with it.

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        idf_ver: ["v4.3", "v4.4", "v5.0", "latest"]
+        idf_ver: ["v4.4", "v5.0", "v5.1", "latest"]
         idf_target: ["esp32"]
         include:
           - idf_ver: "v4.4"
@@ -32,7 +32,7 @@ jobs:
           submodules: recursive
 
       - name: esp-idf build library
-        uses: espressif/esp-idf-ci-action@v1
+        uses: espressif/esp-idf-ci-action@main
         with:
           esp_idf_version: ${{ matrix.idf_ver }}
           target: ${{ matrix.idf_target }}
