Add cppcheck to PR workflow

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -31,13 +31,22 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Install cppcheck
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y cppcheck
+
+      - name: Run cppcheck
+        run: |
+          cppcheck src/*.c --enable=warning --error-exitcode=1 --force
+
       - name: esp-idf build library
         uses: espressif/esp-idf-ci-action@main
         with:
           esp_idf_version: ${{ matrix.idf_ver }}
           target: ${{ matrix.idf_target }}
           path: "example/"
-          command: apt update && apt install -y python3-venv && idf.py build
+          command: apt-get update && apt-get install -y python3-venv && idf.py build
 
       - name: esp-idf build tests
         uses: espressif/esp-idf-ci-action@main
