Add Kconfig for asserts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,3 +34,7 @@ endif()
 if(CONFIG_LITTLEFS_MALLOC_STRATEGY_DISABLE)
     target_compile_definitions(${COMPONENT_LIB} PUBLIC -DLFS_NO_MALLOC)
 endif()
+
+if(NOT CONFIG_LITTLEFS_ASSERTS)
+    target_compile_definitions(${COMPONENT_LIB} PUBLIC -DLFS_NO_ASSERT)
+endif()
