included support for bumpversion version tool

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -11,6 +11,10 @@ replace = littlefs=={new_version}
 search = "{current_version}"
 replace = "{new_version}"
 
+[bumpversion:file:library.json]
+search = "{current_version}"
+replace = "{new_version}"
+
 [bumpversion:file(number):include/esp_littlefs.h]
 search = ESP_LITTLEFS_VERSION_NUMBER "{current_version}"
 replace = ESP_LITTLEFS_VERSION_NUMBER "{new_version}"
