fix esp_idf_version for latest.

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -16,14 +16,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        idf_ver: ["v5.0", "v5.1", "v5.2", "v5.3", "v5.4", "latest"]
+        idf_ver: ["release-v5.0", "release-v5.1", "release-v5.2", "release-v5.3", "release-v5.4", "latest"]
         idf_target: ["esp32"]
         include:
-          - idf_ver: "v5.2"
+          - idf_ver: "release-v5.2"
             idf_target: esp32s2
-          - idf_ver: "v5.2"
+          - idf_ver: "release-v5.2"
             idf_target: esp32c3
-          - idf_ver: "v5.2"
+          - idf_ver: "release-v5.2"
             idf_target: esp32s3
     runs-on: ubuntu-latest
     steps:
@@ -43,7 +43,7 @@ jobs:
       - name: esp-idf build library
         uses: espressif/esp-idf-ci-action@main
         with:
-          esp_idf_version: release-${{ matrix.idf_ver }}
+          esp_idf_version: ${{ matrix.idf_ver }}
           target: ${{ matrix.idf_target }}
           path: "example/"
           command: apt-get update && apt-get install -y python3-venv && idf.py --version && idf.py build
