--- a/Kconfig
+++ b/Kconfig
@@ -260,6 +260,7 @@ menu "LittleFS"
         default "n"
         help
             Use esp_partition_mmap to map the partitions to memory, which can provide a significant
-            performance boost in some cases.
+            performance boost in some cases. Make sure the chip you're using has enough available address
+            space to map the partition (for the ESP32 there is 4MB available).
 
 endmenu
